fix wrong color of MD editor

--- a/src/components/utils/styles/subsocial.css
+++ b/src/components/utils/styles/subsocial.css
@@ -1125,3 +1125,7 @@ hr {
   left: auto !important;
   right: $space_normal !important;
 }
+
+.DfMdEditor .editor-toolbar {
+   border-color: #ddd;
+ }
